<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- 全局文字 -->
	<string name="hello">Hello World!</string>
	<string name="app_name">demos</string>
	<string name="app_version">v1.0</string>
	<!-- 按钮文字 -->
	<string name="btn_confirm">确认</string>
	<string name="btn_cancel">取消</string>
	<string name="btn_comment">写评论</string>
	<string name="btn_addfans">加关注</string>
	<!-- 菜单文字 -->
	<string name="menu_app_write">写微博</string>
	<string name="menu_app_logout">注销账户</string>
	<string name="menu_app_about">应用信息</string>
	<string name="menu_demo_web">网页示例</string>
	<string name="menu_demo_map">地图示例</string>
	<string name="menu_demo_test">测试示例</string>
	<!-- 配置提示 -->
	<string name="config_sign">修改签名</string>
	<string name="config_face">更换头像</string>
	<!-- 提示文字 -->
	<string name="msg_loginfail">登录失败</string>
	<!-- 界面文字 -->
	<string name="login_title">用户登录</string>
	<string name="login_username">账户</string>
	<string name="login_password">密码</string>
	<string name="login_remember">记住密码</string>
	<string name="login_submit">登录</string>
	<string name="edit_submit">保存</string>
	<string name="blog_comment">评论</string>
	<string name="customer_fans">粉丝</string>
	<string name="customer_blog">微博</string>
</resources>
